# fn-media-ai

./: .env.dev  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  AI_PIPELINE_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DEVOPS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  deploy.yml
scripts/deployment/: security-scan.sh  setup-devops.sh
scripts/postgres/: init.sql  schema.sql
scripts/prometheus/: prometheus.yml
scripts/redis/: redis.conf
scripts/setup/: install.sh
src/fn_media_ai/: main.py
src/fn_media_ai/application/commands/: process_photo.py  process_photo_command.py
src/fn_media_ai/application/event_handlers/: post_created_handler.py
src/fn_media_ai/application/services/: event_publisher.py  photo_processor.py
src/fn_media_ai/domain/aggregates/: photo_analysis.py
src/fn_media_ai/domain/entities/: photo_analysis.py
src/fn_media_ai/domain/events/: __init__.py  post_enhanced_event.py
src/fn_media_ai/domain/services/: ai_model_pipeline.py
src/fn_media_ai/domain/value_objects/: color_analysis.py  confidence.py  confidence_score.py  enhancement_level.py  extracted_text.py  object_detection.py  scene_classification.py
src/fn_media_ai/examples/: complete_workflow_example.py
src/fn_media_ai/infrastructure/: service_factory.py
src/fn_media_ai/infrastructure/adapters/: __init__.py  huggingface_adapter.py  ocr_adapter.py  openai_adapter.py  vision_models.py
src/fn_media_ai/infrastructure/cache/: __init__.py  analysis_cache.py  model_cache.py  redis_cache.py
src/fn_media_ai/infrastructure/clients/: gcs.py  gcs_client.py
src/fn_media_ai/infrastructure/config/: __init__.py  settings.py
src/fn_media_ai/infrastructure/events/: __init__.py  post_enhanced_publisher.py
src/fn_media_ai/infrastructure/kafka/: __init__.py  consumer.py  producer.py
src/fn_media_ai/infrastructure/monitoring/: __init__.py  error_handling.py  metrics.py
src/fn_media_ai/infrastructure/persistence/: __init__.py  connection_pool.py  database.py
src/fn_media_ai/infrastructure/repositories/: photo_analysis_repository.py
src/fn_media_ai/infrastructure/serialization/: __init__.py  avro_serializer.py
src/fn_media_ai/infrastructure/services/: __init__.py  ai_model_pipeline_impl.py  image_preprocessor.py  model_manager.py  result_fuser.py
src/fn_media_ai/web/controllers/: health.py  photos.py
src/fn_media_ai/web/middleware/: logging.py
tests/: conftest.py
tests/e2e/: test_main.py  test_photo_analysis.py
